--- a/src/main/resources/static/css/cars.css
+++ b/src/main/resources/static/css/cars.css
@@ -1,15 +1,6 @@
-body {
-    color: #616161;
-    overflow-x: hidden;
-    height: 100%;
-    background-color: #ECEFF1;
-    background-repeat: no-repeat
-}
-
 .card-strip {
     background-color: #fff;
     padding: 25px;
-    width: 950px;
     margin: 20px auto;
     border-radius: 3px;
     box-shadow: 1px 3px 7px;
@@ -103,4 +94,21 @@ body {
 }
 .profile-text{
     color: black;
+    text-decoration: none !important;
+
+}
+.xxx{
+    display: none;
+}
+.card-strip:hover {
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+    z-index: 2;
+}
+.card-strip:hover ~ .xxx{
+    display: block !important;
+}
+.container{
+    width: 100% !important;
 }
