--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -12,7 +12,9 @@
 .card{
     cursor: pointer;
 }
-body{
-
-
+.col-sm-4:hover {
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+    transform: scale(1.2);
+    z-index: 2;
 }
