--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,3 +4,20 @@ a{
     color: white;
 
 }
+.row.header {
+    background-color: #1d2124 !important;
+    padding: 10px;
+    margin-bottom: 50px;
+    font-size: 18px;
+    box-shadow: 1px 2px 5px black;
+    top: 0;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+}
+
+.li-center{
+    margin: auto;
+    color: white;
+
+}
